# Fast-ParC

./: .gitignore  calc_receptive_field.py  convnext_train.py  convnext_train_test.py  dimension_test.py  main.py  metaformer_train.py  metaformer_train_test.py  model_train.py  pyproject.toml  requirements.txt  resnet_train.py  resnet_train_test.py  sweep_metaformer.py
config/: metaformer_config.py
dataset/: ImageNetKaggle.py
layers/: fast_parc.py  parc.py  parc_block.py  parc_factory.py
models/: ConvNeXt_parc.py  Metaformer_Parc.py  ResParcNet.py  original_convnext.py
trainers/: imagenet_convnext.py  imagenet_metaformer.py  imagenet_models.py  imagenet_resnet.py
utils/: visualise.py
