[tool.poetry]
name = "fast-parc"
version = "0.1.0"
description = ""
authors = ["Vitaliy Vorobyov <vitalik.w555@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
