[tool.poetry]
name = "fast-parc"
version = "0.1.0"
description = ""
authors = ["Vitaliy Vorobyov <vitalik.w555@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.5.0"
numpy = "^1.23.5"
torchvision = "^0.14.0"
timm = "^0.6.12"
pytorch-lightning = "^1.8.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
